# agentsPproj09qq12

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
1.prompt_chaining/: promptc_exp2.ipynb
2.parallelization_agents/: parallel_agents_exp1.ipynb  parallel_agents_exp2.ipynb
3.routing_agents/: routing_exp2.ipynb
4.planning_agents/: planning_agent_exp1.ipynb  planning_agent_exp2.ipynb
5.reflection_agents/: reflection_ag_exp1.ipynb  reflection_ag_exp2.ipynb
6.tools_use/: tools_use_exp1.ipynb  tools_use_exp2.ipynb
7.memory_management_pattern/: episodic_memory.json  memmgmt_agent_exp1.ipynb  memmgmt_agent_exp2.ipynb
8.multiagent_colab/: multiag_exp1.ipynb  multiag_exp2.ipynb
parallelization_agents/: parallel_agents.ipynb
prompt_chaining/: promptc_exp1.ipynb
routing_agents/: routing_exp1.ipynb
